# npyglue

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  README.rst  build.bat  build.sh  check.sh  torch_info.py
cmake/: FindSYCL.cmake  abi_check.cc  npygl_doxygen_add_docs.cmake  npygl_get_build_info.cmake  npygl_llvm_library_target.cmake  npygl_py3_targets.cmake  npygl_swig_include.cmake  npygl_target_helpers.cmake  npygl_traits_checker_add_tests.cmake  npyglue-config.cmake.in
doc/: layout.xml  npyglue-sil.md  npyglue.css
include/npygl/: common.h  ctti.hh  demangle.hh  features.h  ndarray.hh  ndarray.i  ndspan.hh  npy_helpers.hh  numpy.i  ostream.hh  py_helpers.hh  python.hh  python.i  range_traits.hh  range_views.hh  string.hh  termcolor.hh  torch.hh  type_traits.hh  version.h.in  warnings.h
include/npygl/python/: argparse.hh  common.h  object.hh
include/npygl/testing/: math.hh  ostream.hh  traits_checker.hh  type_traits_test_driver.hh
sil/npygl/: common.i  ndarray.i  python.i
src/: npygl_ndarray.i
test/: CMakeLists.txt  colorgrid.cc  ctti_demangle_test.cc  ctti_soak_test.cc  ctti_test.cc  llvm_demangle_test.cc  ndspan_test.cc  npy_capsule_cutorch_test.cc  npy_capsule_test.cc  npy_helpers_test.cc  npy_intp_alias_test.cc  npy_traits_test.cc  npy_views_test.cc  npygl_math.i  npygl_math_test.py  npygl_ndarray_test.i  npygl_py_helpers_test.cc  npygl_utils.py  ostream_test.cc  py_capsule_cutorch_test.cc  py_capsule_cutorch_test.cu  py_capsule_test.cc  py_convert_test.cc  py_format_test.cc  py_helpers_test.cc  pyhelpers.cc  pyhelpers_npy_test.py  pyhelpers_test.py  pymath.cc  pymath_swig.i  pymath_test.py  range_traits_test.cc  string_test.cc  termcolors.cc  torch_test.cc  torch_traits_test.cc  traits_checker_filter_test.cc  type_traits_test.cc
test/npygl_test/: CMakeLists.txt  range_views_test.cc
tools/: pyginject.py  pygstylegen.py
